Implemented bike search
