# server/api/swagger/swagger.yaml
@@ -65,7 +65,7 @@ paths:
     post:
       description: Adds new bike information after validation
       # used as the method name of the controller
-      operationId: createBike
+      operationId: create
       security:
         - AccessTokenHeader: []
       parameters:
@@ -74,6 +74,28 @@ paths:
           in: body
           schema:
             $ref: "#/definitions/Bike"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/BasicResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /search/{serial}:
+    x-swagger-router-controller: bikes
+    get:
+      operationId: search
+      summary: Searches for a bike by serial
+      parameters:
+        - in: path
+          name: serial
+          type: string
+          required: true
+          description: Bike serial number.
       responses:
         "200":
           description: Success
